@@ -111,7 +111,7 @@ which configuration file to use:</p>
     <dd>Print the version number of <em>getest</em> and exit.</dd>
     <dt><font color="#800000"><tt>-v<br>
         --verbose</tt></font></dt>
-    <dd>Run <em>getest</em> in verbose mode. In verbose mode, <em>getest</em> 
+    <dd>Run <em>getest</em> in verbose mode. In verbose mode, <em>getest</em>
         prints the number of test cases that have been generated.</dd>
     <dt><font color="#800000"><tt>--</tt></font><a name="ise"><font
         color="#800000"><tt>ise</tt></font></a></dt>
@@ -170,6 +170,11 @@ which configuration file to use:</p>
         color="#000080"><em><strong><tt>feature</tt></strong></em></font></a><font
         color="#000080"><em><strong><tt> </tt></strong></em></font>field
         of the configuration file.</dd>
+    <dt><font color="#800000"><tt>--</tt></font><a
+        name="default_test"><font color="#800000"><tt>default_test</tt></font></a></dt>
+    <dd>Specify whether the feature <font color="#008080"
+        size="2" face="Courier New"><em>default_test</em></font>
+        should be included in the generated test cases.</dd>
     <dt><font color="#800000"><tt>-D &lt;name&gt;[=&lt;value&gt;]</tt></font></dt>
     <dt><font color="#800000"><tt>--</tt></font><a name="define"><font
         color="#800000"><tt>define</tt></font></a><font
@@ -206,7 +211,7 @@ which configuration file to use:</p>
             <strong>http:</strong></font><a
             href="http://www.gobosoft.com"><font size="2">//www.gobosoft.com</font></a><font
             size="2"><br>
-            <strong>Last Updated:</strong> 22 February 2005</font><br>
+            <strong>Last Updated:</strong> 16 November 2005</font><br>
             <!--webbot bot="PurpleText"
             preview="
 $Date$
