@@ -5,7 +5,7 @@ indexing
 		"Test suites"
 
 	library: "Gobo Eiffel Test Library"
-	copyright: "Copyright (c) 2000-2001, Eric Bezault and others"
+	copyright: "Copyright (c) 2000-2005, Eric Bezault and others"
 	license: "Eiffel Forum License v2 (see forum.txt)"
 	date: "$Date$"
 	revision: "$Revision$"
@@ -15,6 +15,9 @@ class TS_TEST_SUITE
 inherit
 
 	TS_TEST
+		redefine
+			variables
+		end
 
 create
 
@@ -40,6 +43,9 @@ feature -- Access
 
 	name: STRING
 			-- Name
+
+	variables: TS_VARIABLES
+			-- Defined variables
 
 feature -- Measurement
 
