@@ -10,16 +10,36 @@ indexing
 	date: "$Date$"
 	revision: "$Revision$"
 
-deferred class TEST_BOOLEAN_REF
+class TEST_BOOLEAN_REF
 
 inherit
 
-	TS_TEST_CASE
+	TEST_CASE
 
 	KL_SHARED_EIFFEL_COMPILER
 		export {NONE} all end
 
 feature -- Test
+
+	run_all is
+			-- Run all tests.
+		do
+			test_default_create
+			test_out
+			test_item
+			test_set_item
+			test_is_hashable
+			test_hash_code
+			test_to_integer
+			test_to_reference
+			test_infix_and
+			test_infix_and_then
+			test_infix_or
+			test_infix_or_else
+			test_infix_xor
+			test_infix_implies
+			test_prefix_not
+		end
 
 	test_default_create is
 			-- Test feature `default_create'
