@@ -1,0 +1,26 @@
+indexing
+
+	description:
+
+		"FreeELKS test cases"
+
+	library: "FreeELKS Library"
+	copyright: "Copyright (c) 2005, Eric Bezault and others"
+	license: "Eiffel Forum License v2 (see forum.txt)"
+	date: "$Date$"
+	revision: "$Revision$"
+
+class TEST_CASE
+
+inherit
+
+	TS_TEST_CASE
+
+feature {NONE} -- Implementation
+
+	deferred_feature is
+			-- VE needs at least a deferred feature in a deferred class.
+		do
+		end
+
+end
