@@ -10,19 +10,41 @@ indexing
 	date: "$Date$"
 	revision: "$Revision$"
 
-deferred class TEST_SPECIAL
+class TEST_SPECIAL
 
 inherit
 
-	TS_TEST_CASE
-
-	KL_SHARED_PLATFORM
-		export {NONE} all end
+	TEST_CASE
 
 	KL_SHARED_EIFFEL_COMPILER
 		export {NONE} all end
 
 feature -- Test
+
+	run_all is
+			-- Run all tests.
+		do
+			test_make
+			test_count
+			test_capacity
+			test_lower
+			test_upper
+			test_item_address
+			test_item
+			test_alias_bracket
+			test_infix_at
+			test_index_of
+			test_all_default
+			test_same_items
+			test_valid_index
+			test_put
+			test_fill_with
+			test_copy_data
+			test_move_data
+			test_clear_all
+			test_resized_area
+			test_aliased_resized_area
+		end
 
 	test_make is
 			-- Test feature `make'.
@@ -102,11 +124,13 @@ feature -- Test
 		local
 			sp1: SPECIAL [INTEGER]
 			sp2: SPECIAL [STRING]
+			l_platform: PLATFORM
 		do
+			create l_platform
 			create sp1.make (3)
-			assert ("item_address1", sp1.item_address (2) = sp1.base_address + 2 * Platform.Integer_bytes)
+			assert ("item_address1", sp1.item_address (2) = sp1.base_address + 2 * l_platform.Integer_bytes)
 			create sp2.make (4)
-			assert ("item_address2", sp2.item_address (1) = sp2.base_address + Platform.Pointer_bytes)
+			assert ("item_address2", sp2.item_address (1) = sp2.base_address + l_platform.Pointer_bytes)
 		end
 
 	test_item is
