@@ -5,6 +5,12 @@ Version 3.5 - ????
 	* Added attribute 'force' to task <xslt>. Use this attribute to
 	  generate output that already exists and is newer than the input.
 
+	getest:
+
+	* Added command-line option --default_test to specify whether the
+	  feature `default_test' should be included in the generated test
+	  cases.
+
 	Gobo Eiffel Kernel Library:
 
 	* KL_WINDOWS_FILE_SYSTEM now accepts both \ and / as directory
